@@ -1,7 +1,9 @@
-<!doctype article PUBLIC "-//OASIS//DTD DocBook V3.1//EN" [
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 ]>
 <article id="index">
-  <artheader>
+  <articleinfo>
     <title>XSETTINGS - cross toolkit configuration proposal</title>
     <releaseinfo>Version 0.5</releaseinfo>
     <date>19 March 2001</date>
@@ -16,7 +18,7 @@
 	</affiliation>
       </author>
     </authorgroup>
-  </artheader>
+  </articleinfo>
 
   <sect1 id="goals">
     <title>Goals</title>
@@ -368,4 +370,3 @@ be set to 65535.
     </formalpara>
   </appendix>
 </article>
-
